# rjs-backend

./: .gitignore  README.md  pyproject.toml
src/core/: settings.py
